<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="4dp"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:text="Registro"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinnerlistadeDoc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:entries="@array/listadeDoc"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputDocumento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nroDocumento"
                        android:textSize="16sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombre"
                        android:textSize="16sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputApellido"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/apellido"
                        android:textSize="16sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputFechaNacimiento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fechaNacimiento"
                        android:textSize="16sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputDomicilio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/domicilio"
                        android:textSize="16sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:textSize="16sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp">

                    <RadioButton
                        android:id="@+id/radioButtonNoSocio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="No Socio" />

                    <RadioButton
                        android:id="@+id/radioButtonSocio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Socio" />
                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputAptoFisico"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/aptoFisico"
                        android:textSize="16sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="Cancelar"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <Button
                        android:id="@+id/btnAccept"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="Aceptar"
                        android:textSize="16sp"
                        android:textStyle="normal" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>